# arcivis-layout

./: .gitignore  .justfile  Cargo.toml  README.md
doc/: improvements.md
doc/design/: algorithm.md  architecture.md
examples/: example.json  layout_example.rs
src/: grid.rs  layout.rs  svg.rs  types.rs
tests/: layout.rs
