[package]
name = "arcivis-layout"
publish = false
edition = "2024"
license = "MIT"
authors = ["Christian Jann <christian.jann@ymail.com>"]
version = "0.1.0"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
petgraph = "0.8.3"
rand = "0.9.2"
tracing = "0.1.41"

[dev-dependencies]
svg = "0.18.0"
tracing-test = { version = "0.2", features = ["no-env-filter"] }
